samples/_failures_safe/1761515614_b88a1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ad167c3.c: In function ‘main’:
./samples/SAFE/__tmp_7ad167c3.c:176: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_7ad167c3.c:175:12: note: to match this ‘(’
  175 |         if (machine.state == STATE_WRITING
      |            ^
./samples/SAFE/__tmp_7ad167c3.c:175:9: error: expected declaration or statement at end of input
  175 |         if (machine.state == STATE_WRITING
      |         ^~
./samples/SAFE/__tmp_7ad167c3.c:175:9: error: expected declaration or statement at end of input
